# HAORENDER-AI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  llm.env.example
StylePresets/: genshin_like_soft_game_anime_v1.haostyle.json  genshin_like_soft_game_anime_v2_bright_viewer.haostyle.json  genshin_like_soft_game_anime_v3_balanced.haostyle.json
desktop/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
desktop/electron/: main.cjs  preload.cjs
desktop/scripts/: dev.cjs
desktop/src/: App.tsx  AppShell.tsx  global.css  main.tsx  types.ts
desktop/src/components/: ThreePreview.tsx
docs/: asset_converter_architecture.md  electron_desktop_shell.md  haorig_retarget_architecture.md  lookdev_ai_parameter_skill.md  lookdev_rendering_skill_library.md  lookdev_style_knowledge_base.md
scripts/: package_release.ps1
src/: main.cpp
src/app/: asset_converter_window.cpp  asset_converter_window.h  expression_agent_tools.cpp  expression_agent_tools.h  llm_lookdev_client.cpp  llm_lookdev_client.h  lookdev_ai.cpp  lookdev_ai.h  main_window.cpp  main_window.h  render_viewport.cpp  render_viewport.h  rig_ai_window.cpp  rig_ai_window.h
src/core/: camera.cpp  camera.h  math_utils.h
src/rendering/: dxr_ray_tracer.cpp  dxr_ray_tracer.h  opengl_rasterizer.cpp  opengl_rasterizer.h  opengl_ray_tracer.cpp  opengl_ray_tracer.h  render_backend.h
src/rigging/: ai_bone_mapper.cpp  ai_bone_mapper.h  animation_retargeter.cpp  animation_retargeter.h  bone_name_normalizer.cpp  bone_name_normalizer.h  retarget_profile.cpp  retarget_profile.h  retarget_quality.cpp  retarget_quality.h  rig_mapping_exporter.cpp  rig_mapping_exporter.h  skeleton_extractor.cpp  skeleton_extractor.h  skeleton_types.cpp  skeleton_types.h
src/scene/: animation_sampler.cpp  animation_sampler.h  gltf_animation_loader.cpp  gltf_animation_loader.h  gltf_vrm_expression_loader.cpp  gltf_vrm_expression_loader.h  gltf_vrm_humanoid_loader.cpp  gltf_vrm_humanoid_loader.h  gltf_vrm_material_loader.cpp  gltf_vrm_material_loader.h  model_loader.cpp  model_loader.h  native_model_converter.cpp  native_model_converter.h  scene_types.h  vrm_expression_controller.cpp  vrm_expression_controller.h  vrm_native_writer.cpp  vrm_native_writer.h
src/tools/: haorender_core.cpp  rig_batch_test.cpp
